欢迎页，登录页
之前完成的欢迎页，现在完成的登录页，部分首页

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,4 +1,11 @@
 {
   "name": "ShengYiZhuanJia",
-  "app_id": ""
+  "app_id": "",
+  "integrations": {
+    "gulp": {}
+  },
+  "type": "ionic1",
+  "watchPatterns": [
+    "scss/**/*"
+  ]
 }
